fixed: small layout issue, text overlapping in protocol description #41

--- a/app/renderer/src/assets/sass/new.scss
+++ b/app/renderer/src/assets/sass/new.scss
@@ -174,6 +174,7 @@ section.protocol {
         flex-wrap:wrap;
         height: 45px;
         padding:10px;
+        
         span{
             font-size: 14px;
             text-align: left;
@@ -182,6 +183,13 @@ section.protocol {
             flex:0 0 121px;
             &.title{
                 font-weight: 800;
+            }
+            &.info{                 
+                width: 100px;
+                height:22px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;                   
             }
         }
     }
